# HPC-Tutorials

./: .gitignore  404.html  index.html  sitemap.xml
.github/workflows/: deploy-docs.yml
examples/CUDA/Example1/: run.slurm
examples/CUDA/Example2/: matrix_multiply.cu  run.slurm
examples/Kokkos/: README.md  run.slurm
examples/Kokkos/Example1/: build.sh
examples/MATAR/: README.md  kokkos-install.sh
examples/MATAR/Example1/: build.sh
examples/MATAR/Example1/solution/: matmul.cpp
examples/MPI/: run.slurm
examples/MPI/Example2/: CMakeLists.txt
examples/OMP_Offload/Example1/: CMakeLists.txt  run.slurm
examples/OpenMP/: run.slurm
examples/OpenMP/Example3/solution/: HealthData_opt1.cpp
examples/autovec/: run.slurm
examples/stdpar/triad/: Makefile.openmp  run.slurm
modules/00-parallel-theory/: index.html
modules/01-hardware/: index.html
modules/02-autovec/: index.html
modules/03-openmp/: index.html
modules/04-cuda/: index.html
modules/05-stdpar/: index.html
modules/06-omp-offload/: index.html
modules/07-mpi/: index.html
modules/08-kokkos/: index.html
modules/09-profiling/: index.html
modules/10-valgrind/: index.html
modules/11-nsight/: index.html
running/slurm/: index.html
running/workstation/: index.html
search/: search_index.json
site/: mkdocs.yml
site/docs/: index.md
site/docs/modules/: 00-parallel-theory.md  01-hardware.md  02-autovec.md  03-openmp.md  04-cuda.md  05-stdpar.md  06-omp-offload.md  07-mpi.md  08-kokkos.md  09-profiling.md  10-valgrind.md  11-nsight.md
site/docs/running/: slurm.md  workstation.md
(+1 files in other folders)
